@@ -24,3 +24,4 @@ depth: 1
  * Reinstate specific labels for chooser buttons (for example 'Choose another page', 'Edit this page' not 'Change', 'Edit') so that it is clearer for users and non-English translations (Matt Westcott)
  * Resolve issue where searches with a tag and a query param in the image listing would result in an `FilterFieldError` (Stefan Hammer)
  * Add missing vertical space between header and content in embed chooser modal (LB (Ben) Johnston)
+ * Use the correct type scale for heading levels in rich text (Steven Steinwand)
